--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,30 +2,12 @@ name: Node.js
 
 on:
   push:
-  pull_request:
-  schedule:
-    # Check if it works with current dependencies
-    - cron: '42 2 * * 6' # weekly on Saturday 2:42 UTC
 
 jobs:
-  test:
-    name: Node.js
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-      - uses: actions/checkout@v4
-      - run: npm install
-      - run: npm test
-      - run: npm pack
-
   publish:
     name: Publish on NPM
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-    needs: test
     permissions:
       contents: write
       id-token: write
@@ -33,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "lts/*"
+          registry-url: "https://registry.npmjs.org"
       - run: npm install
       - run: npm publish
         env:
