--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
-	"extends": "@sindresorhus/tsconfig/tsconfig.json",
-	"include": [
-		"source"
-	],
-	"compilerOptions": {
-		"lib": ["ES2020"],
-		"target": "ES2020", // Node.js 14
-		"outDir": "dist"
-	}
+  "extends": "@sindresorhus/tsconfig/tsconfig.json",
+  "include": ["source"],
+  "compilerOptions": {
+    "target": "esnext",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "outDir": "dist"
+  }
 }
