--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 	"scripts": {
 		"build": "del-cli dist && tsc",
 		"prepack": "npm run build",
-		"test": "tsc --sourceMap && xo"
+		"test": "tsc --sourceMap && xo && c8 --all node --test --enable-source-maps"
 	},
 	"type": "module",
 	"engines": {
@@ -36,8 +36,14 @@
 			}
 		}
 	},
+	"dependencies": {
+		"ms": "^2.1.3"
+	},
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^5.0.0",
+		"c8": "^8.0.1",
+		"@types/ms": "^0.7.34",
+		"@types/node": "^20.10.5",
 		"del-cli": "^5.1.0",
 		"typescript": "^5.3.3",
 		"xo": "^0.56.0"
@@ -47,6 +53,16 @@
 		"!*.test.*",
 		"!test.*"
 	],
+	"prettier": {
+		"printWidth": 80,
+		"tabWidth": 2,
+		"useTabs": false,
+		"semi": false,
+		"singleQuote": false,
+		"trailingComma": "none",
+		"bracketSpacing": true,
+		"bracketSameLine": true
+	},
 	"browser": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"xo": {
@@ -58,10 +74,13 @@
 			{
 				"files": [
 					"**/*.test.*",
-					"**/test.*"
+					"**/test.*",
+					"**/*.spec.*"
 				],
 				"rules": {
-					"@typescript-eslint/prefer-readonly-parameter-types": "off"
+					"@typescript-eslint/prefer-readonly-parameter-types": "off",
+					"@typescript-eslint/no-unsafe-argument": "off",
+					"@typescript-eslint/dot-notation": "off"
 				}
 			}
 		]
