--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: Node.js
+name: Build and Publish
 
 on:
   push:
@@ -12,6 +12,7 @@ jobs:
       contents: write
       id-token: write
     steps:
+      - uses: oven-sh/setup-bun@v1
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
