--- a/package.json
+++ b/package.json
@@ -1,88 +1,83 @@
 {
-	"name": "web-console-progress-bar",
-	"version": "1.1.1",
-	"description": "A progress bar for the browser console.",
-	"keywords": [
-		"progress",
-		"bar",
-		"console",
-		"browser",
-		"web",
-		"cli"
-	],
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/spookyuser/web-console-progress-bar.git"
-	},
-	"author": {
-		"name": "spookyuser",
-		"email": "sfcz1wps@duck.com",
-		"url": "https://github.com/spookyuser"
-	},
-	"scripts": {
-		"build": "del-cli dist && tsc",
-		"prepack": "npm run build",
-		"test": "tsc --sourceMap && xo && c8 --all node --test --enable-source-maps"
-	},
-	"type": "module",
-	"engines": {
-		"node": ">=14"
-	},
-	"targets": {
-		"default": {
-			"engines": {
-				"browsers": ">= 50%"
-			}
-		}
-	},
-	"dependencies": {
-		"ms": "^2.1.3"
-	},
-	"devDependencies": {
-		"@sindresorhus/tsconfig": "^5.0.0",
-		"c8": "^8.0.1",
-		"@types/ms": "^0.7.34",
-		"@types/node": "^20.10.5",
-		"del-cli": "^5.1.0",
-		"typescript": "^5.3.3",
-		"xo": "^0.56.0"
-	},
-	"files": [
-		"dist",
-		"!*.test.*",
-		"!test.*"
-	],
-	"prettier": {
-		"printWidth": 80,
-		"tabWidth": 2,
-		"useTabs": false,
-		"semi": false,
-		"singleQuote": false,
-		"trailingComma": "none",
-		"bracketSpacing": true,
-		"bracketSameLine": true
-	},
-	"browser": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"xo": {
-		"rules": {
-			"@typescript-eslint/prefer-readonly-parameter-types": "warn"
-		},
-		"prettier": true,
-		"overrides": [
-			{
-				"files": [
-					"**/*.test.*",
-					"**/test.*",
-					"**/*.spec.*"
-				],
-				"rules": {
-					"@typescript-eslint/prefer-readonly-parameter-types": "off",
-					"@typescript-eslint/no-unsafe-argument": "off",
-					"@typescript-eslint/dot-notation": "off"
-				}
-			}
-		]
-	}
+  "name": "web-console-progress-bar",
+  "version": "1.1.1",
+  "description": "A progress bar for the browser console.",
+  "keywords": [
+    "progress",
+    "bar",
+    "console",
+    "browser",
+    "web",
+    "cli"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/spookyuser/web-console-progress-bar.git"
+  },
+  "author": {
+    "name": "spookyuser",
+    "email": "sfcz1wps@duck.com",
+    "url": "https://github.com/spookyuser"
+  },
+  "scripts": {
+    "build": "del-cli dist && bun run test && bun run test:e2e && bun run lint && bun build source/index.ts --target=browser --outfile=dist/index.js && bun run build:declaration",
+    "build:declaration": "tsc --emitDeclarationOnly --sourceMap --project tsconfig.json ",
+    "prepack": "npm run build",
+    "lint": "xo",
+    "test": "bun test source",
+    "test:e2e": "bun test e2e",
+    "test:watch": "bun test source --watch"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">=14"
+  },
+  "targets": {
+    "default": {
+      "engines": {
+        "browsers": ">= 50%"
+      }
+    }
+  },
+  "dependencies": {
+    "ms": "^2.1.3",
+    "simple-eta": "^3.0.2"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/ms": "^0.7.34",
+    "@types/node": "^20.10.5",
+    "del-cli": "^5.1.0",
+    "typescript": "^5.3.3",
+    "xo": "^0.56.0"
+  },
+  "files": [
+    "dist",
+    "!*.test.*",
+    "!test.*"
+  ],
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "bracketSameLine": true
+  },
+  "browser": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "xo": {
+    "rules": {
+      "@typescript-eslint/prefer-readonly-parameter-types": "warn"
+    },
+    "prettier": true,
+    "ignores": [
+      "e2e",
+      "*.spec.ts"
+    ]
+  },
+  "module": "index.ts"
 }
